--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,10 @@ h1 {
 .art img {
   width: 70%;
   box-shadow: 0 0 30px 0 rgb(90, 88, 88);
+  transition: all 1s;
 }
+
+.art img:hover { transform: scale(1.2);}
 
 .section-tres {
   grid-area: section3;
