--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+* { 
   margin: 0;
   padding: 0;
 }
@@ -17,19 +17,7 @@ body {
 /* --------------------------------- header --------------------------------- */
 
 
-.grid-home {
-  min-height: 150vh;
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "nav nav nav"
-    "section1 section1 section1"
-    "section2 section2 section2"
-    "section3 section3 section3"
-    "footer footer footer";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 5rem 3rem 25% 35% auto 14rem;
-}
+
 
 header {
   grid-area: header;
@@ -84,101 +72,35 @@ h1 {
 
 /* ------------------------------- fin header ------------------------------- */
 /* ------------------------------- inicio nav ------------------------------- */
-.botonera {
-  grid-area: nav;
+.navbar { 
   background-color: #747c58;
   box-shadow: 0 0 5px 0 rgb(156, 151, 151);
   border-top: 0.5px solid rgb(243, 243, 225);
   z-index: 10;
   position: sticky;
-  top: 5rem;
-}
+  top: 3.5rem; }
 
-.botonera_lista {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+.navbar-collapse { justify-content: center; }
 
-.botonera_lista li {
-  margin: 0.5rem;
-  font-family: "roboto";
-  list-style: none;
-}
-
-.botonera_lista ul {
-  position: absolute;
-  display: none;
-}
-
-.botonera_lista li a {
-  text-decoration: none;
+.nav-link {
   color: rgb(243, 243, 225);
-  font-size: 1.2rem;
 }
+.nav-link:hover {
+  color: rgb(37, 36, 36) ; 
+}
+.dropdown-menu {background-color:  #747c58; }
 
-.botonera_lista ul li {
-  display: block;
-  background-color: #747c58;
-  margin: 0%;
-  padding: 0.5rem;
-  border: 0.5px solid rgb(243, 243, 225);
-  ;
-}
+.dropdown-item { color: rgb(243, 243, 225);}
 
-.botonera_lista li:hover ul {
-  display: block;
-}
 
 /* ------------------------------- fin nav ------------------------------- */
 
 /* ---------------------------------- cuerpo home ---------------------------------- */
 
-.section-uno {
-  grid-area: section1;
-  background-image: url('../Image/portada.png');
-  background-size: cover;
-  display: grid;
-  place-content: center;
-}
 
-.portada {
-  align-items: center;
-  font-size: 3rem;
-  font-family: sans-serif;
-  font-weight: 200;
-  text-align: center;
-  background-color: rgba(226, 216, 171, 0.397);
-  color: rgb(255, 255, 255);
-  text-shadow: 5px -10px 8px rgb(73, 72, 70);
-}
-
-.section-dos {
-  grid-area: section2;
-}
-
-.main {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  font-size: 1.5rem;
-  line-height: 1.5rem;
-  margin-top: 4rem;
-}
-
-.art {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.art img {
-  width: 70%;
+.card-home {
   box-shadow: 0 0 30px 0 rgb(90, 88, 88);
-  transition: all 1s;
 }
-
-.art img:hover { transform: scale(1.2);}
 
 .section-tres {
   grid-area: section3;
@@ -205,13 +127,17 @@ h1 {
   background-color: rgb(116, 116, 116);
   border-radius: 5%;
   padding: 0.6rem 0.8rem;
-  margin: 1rem 0rem;
+  margin: 1rem 4rem;
 }
 
 .boton.nos {
   display: flex;
   justify-content: center;
+  transition: all 1s;
 }
+
+.boton.nos:hover { transform: scale(1.2);}
+
 
 .boton a {
   text-decoration: none;
@@ -759,124 +685,3 @@ video {
 
 
 /* media query */
-
-@media (max-width: 1200px) {
-  .portada {
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 980px) {
-
-  .grid-home {
-    min-height: 200vh;
-    grid-template-rows: 5rem 3rem 0.3fr 1.2fr 0.8fr 14rem;
-  }
-
-  .portada {
-    font-size: 2rem;
-  }
-
-  .main {
-    grid-template-columns: 1fr;
-    justify-items: center;
-  }
-
-  .art {
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-
-  .art img {
-    width: 45%;
-    margin: 1rem;
-  }
-
-  .home-nosotras {
-    grid-template-columns: 1fr;
-    margin: 1rem;
-    justify-items: center;
-  }
-
-  .home-nosotras-texto {
-    margin: 1rem;
-  }
-
-  .section-tres img {
-    width: 100%;
-  }
-
-  .grid-nos {
-    grid-template-areas:
-      "header header"
-      "nav nav"
-      "section1 section1"
-      "section2  section2"
-      "section3 section3"
-      "footer footer";
-    grid-template-rows: 5rem 3rem 0.5fr 0.8fr 0.8fr 14rem;
-  }
-
-  h2 {
-    font-size: 22px;
-  }
-
-  .nos_portada_art {
-    width: 80%;
-  }
-
-  .nos_portada_art p {
-    padding: 0.5rem;
-    font-size: 14px;
-  }
-
-  .nos_main_art1 {
-    justify-self: center;
-    margin: 1rem;
-    font-size: 14px;
-  }
-
-  .nos_main_art2 {
-    justify-self: center;
-    margin: 1rem;
-    font-size: 14px;
-  }
-
-  .nos_main_img1 {
-    justify-self: center;
-  }
-
-  .nos_main_img2 {
-    justify-self: center;
-  }
-}
-
-@media (max-width: 576px) {
-  .grid-home {
-    grid-template-rows: 4rem 2rem 0.3fr 1.2fr 0.8fr 12rem;
-  }
-
-  .grid-nos {
-    grid-template-rows: 4rem 2rem 0.5fr 0.8fr 0.8fr 12rem;
-  }
-
-  h1 {
-    font-size: 18px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-
-  .botonera {
-    top: 4rem
-  }
-
-  .botonera_lista li a {
-    font-size: 14px;
-  }
-
-  footer {
-    font-size: 14px
-  }
-}
