--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* { 
+* {
   margin: 0;
   padding: 0;
 }
@@ -17,10 +17,7 @@ body {
 /* --------------------------------- header --------------------------------- */
 
 
-
-
 header {
-  grid-area: header;
   z-index: 10;
   background-color: #747c58;
   position: sticky;
@@ -28,7 +25,7 @@ header {
 }
 
 .barra {
-  max-width: 72em;
+  max-width: 120rem;
   margin: auto;
   display: flex;
   justify-content: space-evenly;
@@ -39,16 +36,16 @@ header {
 }
 
 .logo-img {
-  width: 7%;
+  width: 70px;
   border-radius: 20%;
-  padding: 0.6rem;
+  padding: 0.5rem;
 }
 
 h1 {
   color: rgb(219, 206, 161);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: xx-large;
+  font-size: 1.8rem;
   font-weight: unset;
   align-self: center;
 }
@@ -72,54 +69,90 @@ h1 {
 
 /* ------------------------------- fin header ------------------------------- */
 /* ------------------------------- inicio nav ------------------------------- */
-.navbar { 
+.navbar {
   background-color: #747c58;
   box-shadow: 0 0 5px 0 rgb(156, 151, 151);
   border-top: 0.5px solid rgb(243, 243, 225);
   z-index: 10;
   position: sticky;
-  top: 3.5rem; }
+  top: 4.2rem;
+}
 
-.navbar-collapse { justify-content: center; }
+.navbar-collapse {
+  justify-content: center;
+}
 
-.nav-link {
+.button-nav {
+  background-color: rgb(243, 243, 225);
+  color: gray;
+}
+
+.navbar-light {
+  color: rgb(243, 243, 225) !important;
+}
+
+.nav-item a {
+  color: rgb(243, 243, 225) !important;
+  font-size: 1.2rem;
+}
+
+.nav-link:hover {
+  color: rgb(37, 36, 36);
+}
+
+.dropdown-menu {
+  background-color: #747c58;
+}
+
+.dropdown-item {
   color: rgb(243, 243, 225);
 }
-.nav-link:hover {
-  color: rgb(37, 36, 36) ; 
+
+.botonera_lista ul {
+  position: absolute;
+  display: none;
 }
-.dropdown-menu {background-color:  #747c58; }
 
-.dropdown-item { color: rgb(243, 243, 225);}
-
+.navbar-nav li:hover ul {
+  display: block;
+}
 
 /* ------------------------------- fin nav ------------------------------- */
 
 /* ---------------------------------- cuerpo home ---------------------------------- */
 
+.text-carousel { font-size: 2.5rem;}
+
+.container {
+  max-width: 72rem;
+  margin: auto;
+}
 
 .card-home {
   box-shadow: 0 0 30px 0 rgb(90, 88, 88);
 }
 
-.section-tres {
-  grid-area: section3;
-  max-width: 80%;
-  margin: auto;
+.card-img-top {
+  transition: all 1s;
 }
 
-.section-tres img {
+.card-img-top:hover {
+  transform: scale(0.9);
+}
+
+.btn { background-color: rgb(116, 116, 116);
+  border-radius: 5%;
+  color: white;
+border: none;
+}
+
+.img_nosotras {
   width: 100%;
+  padding: 3rem;
 }
 
 .home-nosotras {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 5rem 1rem;
-}
-
-.home-nosotras-texto {
-  margin: 1rem 5rem 1rem 8rem;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -136,8 +169,9 @@ h1 {
   transition: all 1s;
 }
 
-.boton.nos:hover { transform: scale(1.2);}
-
+.boton.nos:hover {
+  transform: scale(1.2);
+}
 
 .boton a {
   text-decoration: none;
@@ -246,85 +280,29 @@ h5 {
 
 /* -------------------------------- nosotras -------------------------------- */
 
-.grid-nos {
-  display: grid;
-  min-height: 150vh;
-  grid-template-areas:
-    "header header"
-    "nav nav"
-    "section1 section1"
-    "section2  section3"
-    "section2 section3"
-    "footer footer";
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 5rem 3rem auto 25% 25% 14rem;
-}
-
 .nos_portada {
-  grid-area: section1;
   display: grid;
 }
-
 .nos_portada_art {
   justify-self: center;
   width: 60%;
   margin: 1rem;
 }
-
 .nos_portada p {
   text-align: center;
+}
+.nos_main_img {
+  width: 80%;
   padding: 1rem;
-}
-
-.nos_main1 {
-  grid-area: section2;
-  display: grid;
-  position: relative;
-  bottom: 5rem;
-}
-
-.nos_main2 {
-  grid-area: section3;
-  display: grid;
-  position: relative;
-  bottom: 5rem;
-}
-
-.nos_main_img1 {
-  justify-self: end;
-  width: 50%;
-  height: auto;
-  padding: 1rem;
-  margin: 2rem 6rem 1rem 6rem;
+  margin: 2rem;
   border-radius: 2%;
   position: relative;
   top: 6rem;
 }
-
-.nos_main_art1 {
-  justify-self: end;
-  width: 50%;
-  padding: 4rem 3rem 1rem 3rem;
-  margin: 1rem 4rem 2rem 1rem;
-  border: 2px solid gray;
-}
-
-.nos_main_img2 {
-  justify-self: start;
-  width: 50%;
-  height: auto;
-  padding: 1rem;
-  margin: 2rem 6rem 1rem 6rem;
-  border-radius: 2%;
-  position: relative;
-  top: 6rem;
-}
-
-.nos_main_art2 {
-  justify-items: start;
-  width: 50%;
-  padding: 4rem 3rem 1rem 3rem;
-  margin: 1rem 1rem 2rem 4rem;
+.nos_main_art {
+  width: 90%;
+  padding: 4rem 2rem 1rem 2rem;
+  margin: 0.5rem 0.5rem 2rem 0.5rem;
   border: 2px solid gray;
 }
 
