--- a/css/style.css
+++ b/css/style.css
@@ -310,26 +310,8 @@ h5 {
 
 /* -------------------------------- Productos ------------------------------- */
 
-.grid-prod {
-  display: grid;
-  min-height: 150vh;
-  grid-template-areas:
-    "header header header"
-    "nav nav nav"
-    "tit tit tit"
-    "section2  section2 section2"
-    "footer footer footer";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 5rem 3rem 5% auto 14rem;
-}
-
-.tit {
-  grid-area: tit
-}
-
-.container_prod {
-  grid-area: section2;
-  margin: 2rem 10rem;
+.tit{ max-width: 1140px;
+  margin: auto
 }
 
 h3 {
@@ -349,34 +331,16 @@ h3 {
   margin-top: 2rem;
 }
 
-.item {
-  display: inline-block;
-  text-align: center;
-}
-
 .item_img {
-  width: 15rem;
-  padding: 0.5rem 1rem;
+  width: 18rem;
+  padding: 0.5rem 0.5rem;
 }
 
 /* ------------------------------ fin productos ----------------------------- */
 
 /* --------------------------------- eventos -------------------------------- */
-.grid-mayorista {
-  display: grid;
-  min-height: 150vh;
-  grid-template-areas:
-    "header header header"
-    "nav nav nav"
-    "section1 section1 section1"
-    "section2 section2 section2"
-    "footer footer footer";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 5rem 3rem 1fr 2fr 14rem;
-}
 
 .mayor_tit {
-  grid-area: section1;
   background-image: url("../Image/evento-portada.png");
   width: 100%;
   height: 15rem;
@@ -394,7 +358,6 @@ h3 {
 }
 
 .container_mayor {
-  grid-area: section2;
   margin: 2rem 10rem;
   align-items: center;
 }
@@ -406,7 +369,6 @@ h3 {
 
 .container_mayor a {
   background-color: rgb(116, 116, 116);
-  ;
   color: white;
   padding: 1rem;
 }
@@ -414,20 +376,7 @@ h3 {
 /* ------------------------------- fin evento ------------------------------- */
 /* --------------------------------- + Info --------------------------------- */
 
-.grid-info {
-  display: grid;
-  min-height: 200vh;
-  grid-template-areas:
-    "header header"
-    "nav nav"
-    "section1 section1"
-    "footer footer";
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 5rem 3rem 2fr 14rem;
-}
-
 .section-info {
-  grid-area: section1;
   align-items: center;
   max-width: 85%;
   margin: auto;
@@ -474,8 +423,6 @@ video {
 
 .main_art_video {
   width: 100%;
-
-
   justify-self: start;
 }
 
@@ -506,32 +453,10 @@ video {
   align-self: center;
 }
 
+
 /* ------------------------------ Fin articulos ----------------------------- */
 /* -------------------------------- contacto -------------------------------- */
 
-.grid-contacto {
-  display: grid;
-  min-height: 120vh;
-  grid-template-areas:
-    "header header"
-    "nav nav"
-    "section1 section2"
-    "footer footer";
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 5rem 3rem auto 14rem;
-}
-
-.main_contacto {
-  grid-area: section1;
-  display: grid;
-  justify-content: end;
-  align-content: center;
-  margin: 0rem 0rem 2rem 10rem;
-}
-
-.section_contacto {
-  display: flex;
-}
 
 .contacto-tit {
   font-size: 1.5rem;
@@ -546,12 +471,6 @@ video {
   justify-content: flex-start;
 }
 
-.datos-redes {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .item_redes {
   display: flex;
   justify-content: center;
@@ -559,7 +478,7 @@ video {
 }
 
 .item_redes img {
-  width: 7%;
+  width: 15%;
   height: auto;
 }
 
@@ -571,23 +490,17 @@ video {
 }
 
 .mapa {
-  width: 80%;
-  height: 50%;
-  padding: 5rem 0rem 5rem 0rem;
+  width: 100%;
+  height: auto;
 }
 
 /* form  */
-
-.formulario {
-  grid-area: section2;
-}
 
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(226, 225, 225);
-  margin: 3rem 5rem 3rem 0rem;
 }
 
 .form-tit {
