--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,11 @@ footer .foot .botonera_f ul li a {
   text-decoration: none;
   color: black;
 }
+@media screen and (max-width: 576px) {
+  footer .foot .botonera_f {
+    display: none;
+  }
+}
 footer .foot .redes {
   display: flex;
   flex-direction: column;
@@ -456,7 +461,9 @@ h3 {
 }
 
 .evento-descripcion {
-  background-color: rgba(139, 85, 27, 0.363);
+  background-color: #f7f4eb;
+  border: 2px solid #747c58;
+  border-radius: 2%;
   color: rgb(63, 44, 8);
   text-align: center;
   font-size: 1.2rem;
