--- a/scss/componentes/_mayorista.scss
+++ b/scss/componentes/_mayorista.scss
@@ -47,7 +47,10 @@
 }
 
 .evento-descripcion {
-  background-color: rgba(139, 85, 27, 0.363);
+  // background-color: rgba(139, 85, 27, 0.363);
+  background-color: lighten(nth($colores, 3),20%);
+  border: 2px solid nth($colores,1);
+  border-radius: 2%;
   color: rgb(63, 44, 8);
   text-align: center;
   font-size: 1.2rem;
