--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -2,7 +2,7 @@
   
 .nos_portada {
     display: grid;
-    background-image: url(../Image/fondo-nos.png);
+    background-image: url(../../img/fondo-nos.png);
     background-size: contain;
     max-width: 72rem;
     margin: auto
