--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -3,7 +3,9 @@
     padding: 0;
   }
   
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Slabo+27px&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@1,600;1,700&family=Slabo+27px&display=swap');
+
   
   
   body {
@@ -14,7 +16,6 @@
     font-size: 16px;
   }
 
- 
 
   // colores 
 
