--- a/scss/base/_header-nav.scss
+++ b/scss/base/_header-nav.scss
@@ -2,21 +2,24 @@
 
 header {
     z-index: 10;
-    background-color: nth($colores, 1);
+    // background-color: nth($colores, 1);
     position: sticky;
+    transition: 0.7s;
+    margin-top: 20px;
     top: 0;
+    font-size: 1.3rem;
 
     .barra {
-        max-width: 72em;
+        max-width: 72rem;
         margin: auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
 
         .logo {
             display: flex;
 
             .logo-img {
-                width: 70px;
+                width: 4em;
                 border-radius: 20%;
                 padding: 0.5em;
             }
@@ -29,6 +32,7 @@ header {
                 font-weight: unset;
                 align-self: center;
             }
+            display: none;
         }
 
         .redes_head {
@@ -51,17 +55,39 @@ header {
         font-size: 12px;
     }
 }
+header.down { background-color: nth($colores,1);
+font-size: 1rem;
+
+.logo {
+    display: flex;
+
+    .logo-img {
+        width: 4em;
+        border-radius: 20%;
+        padding: 0.5em;
+    }
+
+    h1 {
+        color: nth($colores, 3);
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-size: 1.8em;
+        font-weight: unset;
+        align-self: center;
+    }
+}
+.navbar { top: 0rem}
+}
+
 
 /* ------------------------------- fin header ------------------------------- */
 /* ------------------------------- inicio nav ------------------------------- */
 .navbar {
-    background-color: #747c58;
-    box-shadow: 0 0 5px 0 rgb(156, 151, 151);
-    border-top: 0.5px solid nth($colores, 2);
+    box-shadow: 0 0 5px 0 rgb(221, 215, 215);
     z-index: 10;
-    position: sticky;
-    top: 4.5rem;
     padding: 0px;
+    position: relative;
+    top:5em
 }
 
 .button-nav {
@@ -77,13 +103,9 @@ header {
     display: block;
 }
 
-.navbar-light {
-    color: nth($colores, 2) !important;
-}
-
 .nav-link {
     color: nth($colores, 2) !important;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     --clippy: polygon(0 0, 0 0, 0 98%, 0% 100%);
 }
 
@@ -104,7 +126,7 @@ header {
 }
 
 .dropdown-menu {
-    background-color: nth($colores, 1);
+    background-color: transparent
 }
 
 .dropdown-item {
