--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
 @import "base/common";
+@import "base/mapas";
+@import "extends";
 @import "base/header-nav";
 @import "base/footer";
 @import "componentes/home";
@@ -7,6 +9,7 @@
 @import "componentes/mayorista";
 @import "componentes/+info";
 @import "componentes/contacto";
+
 
 
   
