--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
   }
-  
+
+  // fuentes 
+
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Slabo+27px&display=swap');
   
   
@@ -14,9 +16,8 @@
     font-size: 16px;
   }
 
- 
 
-  // colores 
+  // variable colores 
 
   $colores: 
   #747c58, 
@@ -25,7 +26,46 @@
   #a3a59e77,
   rgb(148, 138, 138);
 
+// Mapas
+
+  $redes: (
+    instagram: rgba(208, 34, 214, 0.973),
+    facebook: rgba(33, 108, 221, 0.973), 
+);
 
 
+// extends 
 
+%boton {
+  background-color: rgb(148, 138, 138);
+  border-radius: 5%;
+  color: white;
+  border: none;
+  transition: all 1s;
 
+  &:hover {
+      background-color: #747c58;
+      color: rgb(243, 243, 225);
+      transform: scale(1.1);
+  }
+
+  a {
+      text-decoration: none;
+      color: white;
+  }
+}
+
+%flexbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// mixins
+
+@mixin ubicacion ($tipo, $fila, $columna, $direction) {
+  display: $tipo;
+  justify-content: $fila ;
+  align-items: $columna ;
+  flex-direction: $direction;
+}
