--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -4,10 +4,8 @@
    background-color: nth($colores, 4);
 
    .foot {
-     display: flex;
-     flex-direction: row;
+    @include ubicacion (flex, space-between, center, row);
      flex-wrap: wrap;
-     justify-content: space-between;
      max-width: 1140px;
      margin: auto;
 
@@ -39,8 +37,7 @@
      }
 
      .redes {
-       display: flex;
-       flex-direction: column;
+       @include ubicacion (flex, center, center, column);
        margin: 0em 0.5em;
 
        .redes_tit {
@@ -52,8 +49,7 @@
        }
 
        .redes_iconos {
-         display: flex;
-         justify-content: center;
+        @extend %flexbox;
          padding-top: 2rem;
 
          .redes_link1 {
@@ -88,8 +84,7 @@
      }
 
      .foot_contacto {
-       display: flex;
-       flex-direction: column;
+       @include ubicacion (flex, center, center, column);
        text-align: start;
        margin: 0em 0.5em;
 
