--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import "base/common";
-@import "base/mapas";
-@import "extends";
+@import "base/extends";
 @import "base/header-nav";
 @import "base/footer";
 @import "componentes/home";
