--- a/scss/componentes/_home.scss
+++ b/scss/componentes/_home.scss
@@ -3,12 +3,12 @@
 .item,
 .active {
   height: 100%;
-  overflow: hidden
-}
+ img { object-fit: cover; 
+height: 100%; }
+ }
 
 .carousel-inner {
   height: 100%;
-  overflow: hidden
 }
 
 .carousel {
@@ -16,7 +16,6 @@
   top: 0;
   height: 100vh;
   width: 100%;
-  overflow: hidden
 }
 
 .text-carousel {
@@ -28,7 +27,6 @@
   background-color: rgba(129, 128, 125, 0.452);
   border-radius: 5%;
   box-shadow: 0 0 30px 0 rgb(167, 157, 157);
-
 }
 
 .container {
@@ -38,7 +36,7 @@
 
 .cont-home {
   position: relative;
-  top: 35rem;
+  top: 40rem;
 }
 
 .cont-card {
