--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "base/common";
-@import "base/header-nav";
+@import "base/header";
+@import "base/header-home";
 @import "base/footer";
 @import "componentes/home";
 @import "componentes/nosotras";
